--- a/views/bid4free.jade
+++ b/views/bid4free.jade
@@ -127,7 +127,7 @@ block content
 							span.caret
 						ul.dropdown-menu(role='menu')
 							li
-								a#measure(href='#' ng-click="toggleMeasure()") Measure
+								a#measure(href='#' ng-click="toggle_measure()") Measure
 					li.dropdown
 						a.dropdown-toggle(data-toggle="dropdown" href='#') View
 							span.caret
@@ -145,12 +145,14 @@ block content
 					background(skyangle="0.9 1.5 1.57" skycolor="0.21 0.18 0.66 0.2 0.44 0.85 0.51 0.81 0.95 0.83 0.93 1" groundangle="0.9 1.5 1.57" groundcolor="0.65 0.65 0.65 0.73 0.73 0.73 0.81 0.81 0.81 0.91 0.91 0.91")
 					environment(frustumCulling="true" smallFeatureCulling="true" smallFeatureThreshold="5" occlusionCulling="true")
 					!{xml}
-					Group(ng-controller="MeasurerCtrl")
-						Transform.lineTrans("render"="{{renderFlag}}")
-							shape("isPickable"="false")
-								Appearance
-									Material("emissiveColor"="1 0 0")
-										DepthMode("enableDepthTest"="false")
-											IndexedLineSet("coordIndex"="0 1 0 -1")
-												Coordinate.line(point="{{pointString}}")
+					Transform.lineTrans(ng-controller="MeasurerCtrl" render="{{render()}}")
+						shape(isPickable="false")
+							Appearance
+								Material(emissiveColor="1 0 0")
+								DepthMode(enableDepthTest="false")
+							IndexedLineSet(coordIndex="0 1 0 -1")
+								Coordinate.line(point="{{pointString()}}")
+			div.measure-info(ng-controller="MeasurerCtrl" ng-show="render()")
+				p Distance: {{distance()}} m
+
 
