--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -43,6 +43,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#579ce4', end
   
 }
 
+.ng-scope {
+	background-color: #fff !important;
+       }	
+
 #popup {
 	position: absolute;
 	bottom: 10px;
