--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,19 +2,24 @@ doctype xhtml
 html
 	head
 		title 3drepo.io
+		script.
+			var dbname = "#{dbname}";
 		link(rel='stylesheet' type='text/css' href='#{x3domcss}')
 		script(type="text/javascript" src='#{x3domjs}')
 		script(type="text/javascript" src="#{jqueryjs}")
-		script(type="text/javascript" src='https:////cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js')
-		script(type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js')
-		script(type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js')
+		script(type="text/javascript" src="#{jqueryuijs}")
+		script(type="text/javascript" src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js')
+		script(type="text/javascript" src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js')
+		script(type="text/javascript" src='//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js')
 		script(type="text/javascript" src='../js/x3dcontroller.js')
 		script(type="text/javascript" src='../js/3drepoapp.js')
 		script(type="text/javascript" src='../js/measurer.js')
-		
 		link(rel='stylesheet', href='../bootstrap/dist/css/bootstrap.min.css')
 		script(type="text/javascript" src="../bootstrap/dist/js/bootstrap.min.js")
 		script(type="text/javascript" src="../bootstrap3-dialog/dist/js/bootstrap-dialog.min.js")
+		link(rel='stylesheet', href="../fancytree/dist/skin-xp/ui.fancytree.min.css" type="text/css")
+		script(type="text/javascript" src="../fancytree/dist/jquery.fancytree-all.js")
 		link(rel='stylesheet' type='text/css' href='#{repouicss}')
 		body(ng-app='3drepoapp')
+			block menu
 			block content
