--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -28,10 +28,17 @@
 }
 
 body {
-    height : 100%;
     margin : 0;     
     padding : 0;
-    width : 100%;  
+          -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.fill {    
 background: rgb(87,156,228); /* Old browsers */
 background: -moz-linear-gradient(top,  rgb(87,156,228) 0%, rgb(130,206,242) 41%, rgb(207,236,254) 50%, rgb(210,235,252) 50%, rgb(229,232,233) 50%, rgb(231,231,231) 50%, rgb(206,206,206) 58%, rgb(195,195,195) 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(87,156,228)), color-stop(41%,rgb(130,206,242)), color-stop(50%,rgb(207,236,254)), color-stop(50%,rgb(210,235,252)), color-stop(50%,rgb(229,232,233)), color-stop(50%,rgb(231,231,231)), color-stop(58%,rgb(206,206,206)), color-stop(100%,rgb(195,195,195))); /* Chrome,Safari4+ */
@@ -40,7 +47,7 @@ background: -o-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb
 background: -ms-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* IE10+ */
 background: linear-gradient(to bottom,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#579ce4', endColorstr='#c3c3c3',GradientType=0 ); /* IE6-9 */
-  
+
 }
 
 
@@ -58,7 +65,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#579ce4', end
 #dist_name {
 	visibility: hidden;
 }
-
+dd
 #distance {
 	visibility: hidden;
 	color: red;
@@ -71,25 +78,25 @@ h1#logo {
     bottom: 0;
     right: 0.3em;
     z-index: 10;
-    font-size: 400%;
+    font-size: 600%;
+}
+
+
+
+h1#logo,
+#x3dom-state-viewer,
+.navbar-collapse a,
+.dropdown-menu>li>a,
+.dropdown-menu>li>a:hover,
+.fancytree-selected span.fancytree-title,
+span.fancytree-title{
     color: white;
     font-weight: 100;
-    text-shadow:
-        0 0 1px #666,
-        1px 1px 1px #666;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    text-shadow: 0 0 1px #666, 1px 1px 1px #666;
 }
 
 #x3dom-state-viewer {
-    color: white;
-    text-shadow:
-        0 0 1px #666,
-        1px 1px 1px #666;
+    top: 50px;
     background-color: transparent;
 }
 
@@ -106,8 +113,6 @@ div#x3dom_logdiv.x3dom-logcontainer {
     background: rgba(0,0,0,0.4);
 }
 
-.whitenavbar {
-}
 
 .scrollable-menu {
     height: auto;
@@ -123,6 +128,25 @@ div#x3dom_logdiv.x3dom-logcontainer {
 nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
     background-color: transparent !important;
     border-color: transparent !important; 
+}
+
+.nav>li>a:hover, .nav>li>a:focus {
+    background-color: rgba(255,255,255,0.25);	
+}
+
+
+.nav .open>a, .nav .open>a:hover, .nav .open>a:focus,
+.navbar-nav>li>.dropdown-menu {
+    background-color: rgba(0,0,0,0.5);
+    border: none;
+}
+
+.dropdown-menu>li>a:hover {
+    background-color: rgba(0,0,0,0.1);
+}
+
+.dropdown-menu {
+    border-radius: none !important;
 }
 
 .fill {
@@ -144,17 +168,48 @@ nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
     margin-left: 10px;
 }
 
-/* Tree view stuff */
+
+.table tr {
+    background-color: white;
+}
+.table tr:hover {
+    background-color: #fff6c1;
+}
+
+/******************************************************************************/
+/* Tree view stuff                                                            */
+/******************************************************************************/
 
 .treeview {
-	top: 50px;
+    top: 50px;
     position: absolute;
-	z-index: 10000;
+    z-index: 1;
+    overflow: auto;
+    max-height: calc(100% - 50px);  
+    max-width: 30%;
 }
 .treeview-header{
     text-align: center;
     height: 100px;
 }
+
+
+ul.fancytree-container {
+    background-color: transparent;
+    max-height: 100% !important;
+    overflow: auto !important;
+    border: none !important;
+    outline:none !important;
+}
+
+span.fancytree-title:hover {
+    background-color: rgba(255,255,255,0.25);
+    border-color:  rgba(255,255,255,0.25);
+}
+
+
+
+
 
 .treeview-body {
     overflow-x: hidden;
@@ -235,15 +290,4 @@ nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
     top: 2px;
     opacity: 0.25;
 }
-
-ul.fancytree-container {
-	background-color: transparent;
-    /* Firefox */
-    max-height: -moz-calc(100% - 50px);
-    /* WebKit */
-    max-height: -webkit-calc(100% - 100px);
-    /* Opera */
-    max-height: -o-calc(100% - 50px);
-    /* Standard */
-    max-height: calc(100% - 50px);
-}	
+	
