--- a/views/viewer.jade
+++ b/views/viewer.jade
@@ -1,7 +1,7 @@
 append content
 	div(id="x3dRef")
 		x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" disableDoubleClick="true" showStat="true" showLog="false" style="width:100%; height:100%; border:0px;")
-			scene.
+			scene(onbackgroundClicked="bgroundClick(event);").
 				!{xml}
 			block scene
 
