--- a/views/viewer.jade
+++ b/views/viewer.jade
@@ -1,7 +1,8 @@
 append content
-	div(id="x3dRef")
-		x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" disableDoubleClick="true" showStat="true" showLog="false" style="width:100%; height:100%; border:0px;")
-			scene(onbackgroundClicked="bgroundClick(event);").
-				!{xml}
-			block scene
+	script(type="text/javascript" src='../js/viewer.js')
+	script(type="text/javascript" src='../js/controlinterface.js')
+	x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" id="viewer" showStat="true" showLog="false" style="width:100%; height:100%; border:0px;")
+		scene(onbackgroundClicked="bgroundClick(event);")
+			!{xml}
+			block scene.
 
