--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 extends layout
 
 append menu
-	//div.treeview
-		//include tree
+	div.treeview
+		include tree
 	include menu
 	include measurer-menu
 
