--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -305,6 +305,7 @@ hr {
 .placeholder-screenshot-large{
 	background-color: #004594 !important;
 	min-height: 600px;
+  box-shadow: inset  0  8px 18px -8px #000, inset  0 -8px 18px -8px #000;
 }
 
 .placeholder-screenshot{
