--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
 	head
 		title 3drepo.io
 		script.
-			var dbname = "#{dbname}";
+			var project = "#{project}";
 		link(rel='stylesheet' type='text/css' href='#{x3domcss}')
 		script(type="text/javascript" src='#{x3domjs}')
 		script(type="text/javascript" src="#{jqueryjs}")
