--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -214,7 +214,6 @@ hr {
 	border-radius: 3px;
   border: 1px solid;
   border-color: #DDD;
-  min-height: 100px;
 }
 
 .project-title h2{
@@ -346,7 +345,7 @@ hr {
 
 .month-block{
 	margin-left: 20px;
-	padding-right: 40px;
+	padding-right: 20px;
 	padding-left: 0px;
 	border-left: 3px solid #444;
 }
@@ -356,10 +355,89 @@ hr {
 	font-size: 10pt;
 }
 
+.menu-button{
+ margin-bottom: 20px;
+}
+
+
+.button-title{
+	font-size: 11pt;
+	height: 100%;
+	font-weight: bold !important;
+	color: #555;
+}
+
+.button-keyword{
+	font-size: 11pt;
+	height: 100%;
+	font-weight: bold !important;
+	color: #4183c4;
+}
+
+.float-right{
+	float: right;
+}
+
+/*.history-block{
+	margin-left: 20px;
+	padding-right: 40px;
+	padding-left: 0px;
+}
+
+.history-block h3{
+	font-weight: normal;
+	font-size: 10pt;
+}*/
+
+#myChart{
+
+}
+
+.log{
+	margin-left: 10px;
+	padding-right: 10px;
+	padding-left: 0px;
+	margin-bottom: 10px;
+}
+
+.log-icon-block{
+	float: left;
+	line-height: 42px;
+	min-height: 42px;
+	min-width: 42px;
+	
+}
+
+.log-icon{
+	min-width: 32px;
+	width: 32px;
+	height: 32px;
+	margin-right: 5px;
+	opacity: 0.75;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.log-block{
+
+	background-color: #FFF;
+	
+	min-height: 40px;
+	margin: 0px 10px;
+	margin-left: 42px;
+	border: 1px solid #EEE;
+}
+
+.log-block p{
+	padding:0px;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	font-size: 10pt;
+}
+
 .commit-block{
 
 	background-color: #FFF;
-	width: 100%;
 	min-height: 40px;
 	margin: 10px;
 	border: 1px solid #EEE;
@@ -429,6 +507,23 @@ hr {
 	color: #888;
 }
 
+.comment-keyword-title{
+	font-weight: normal;
+	font-size: 10pt;;
+	padding-top: 0px;
+	padding-bottom: 0px;	
+	color: #888;
+}
+
+.comment-date-title{
+	float: right;
+	font-weight: normal;
+	font-size: 10pt;;
+	padding-top: 0px;
+	padding-bottom: 0px;	
+	color: #888;
+}
+
 .history-author{
 	font-weight: bold;
 	font-size: 10pt;
@@ -467,3 +562,22 @@ hr.fancy-line {
 	margin-right: 5px;
 	margin-top: 17px;
  }
+
+/* Dashboard */
+
+.dashboard-tab{
+	color: #555 !important; 	
+}
+
+.margin-bottom{
+	margin-bottom: 20px;
+}
+
+.project-line{
+	border-bottom: 1px solid;
+	border-color: #DDD;
+}
+
+.project-line:last-child{
+	border-bottom: 0px solid;
+}
