--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -309,11 +309,13 @@ hr {
 	background-color: #004594 !important;
 	min-height: 600px;
   box-shadow: inset  0  8px 18px -8px #000, inset  0 -8px 18px -8px #000;
+	width: 100%;
 }
 
 .placeholder-screenshot{
 	background-color: #004594 !important;
 	min-height: 300px;
+	width: 100%;
 }
 
 /* Form */
