--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -138,6 +138,10 @@ a:hover {
 	padding: 10px;
 }
 
+.block h2 {
+  padding: 0 10px;	
+}
+
 .block-header{
 	background-color: #fafafa;
 	float: left;
@@ -310,6 +314,8 @@ hr {
 	min-height: 600px;
   box-shadow: inset  0  8px 18px -8px #000, inset  0 -8px 18px -8px #000;
 	width: 100%;
+	border: none;
+	display: block;
 }
 
 .placeholder-screenshot{
