--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -49,10 +49,11 @@ a:hover {
 	background: #fafafa;
 	height: 60px;
 	min-height: 60px;
+	border-bottom: 1px solid #DDD;	
 }
 
 .header-logo {
-	background: #fafafa;
+/*	background: #fafafa; */
 	height: 60px;
 }
 
@@ -312,10 +313,14 @@ hr {
 .placeholder-screenshot-large{
 	background-color: #004594 !important;
 	min-height: 600px;
-  box-shadow: inset  0  8px 18px -8px #000, inset  0 -8px 18px -8px #000;
+	box-shadow: inset  0  8px 18px -8px #000, inset  0 -8px 18px -8px #000;
 	width: 100%;
 	border: none;
 	display: block;
+}
+
+.iframe-placeholder-screenshot-large {
+    z-index: -1;
 }
 
 .placeholder-screenshot{
