--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -333,4 +333,26 @@ span.fancytree-title:hover {
 	height: 100%;
 }
 
+.floatingMeta {
+    font-family: sans-serif;
+	color: white;
+	font-weight: 100;
+	padding: 6px;
+	margin:  2px;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.5);
+	position: absolute;
+	border:   none
+	z-index:   15000;
+	min-width:    70px;
+	min-height:   1px;
+	left:     0px;
+	top:      0px;
+}
 
+.line {
+	background: black;
+	width:      1px;
+	position:   absolute;
+	height:     1px;
+}
