MASTER - Some CSS updates for dblist page (Need to rewrite)

--- a/views/login.jade
+++ b/views/login.jade
@@ -3,6 +3,7 @@ html
 	head
 		title 3drepo.io
 		link(rel='stylesheet', href='#{bootstrapcss}')
+		script(type="text/javascript" src="#{jqueryjs}")
 		script(type="text/javascript" src="#{bootstrapjs}")
 		script(type="text/javascript" src="#{bootstrapdialog}")
 		link(rel='stylesheet' type='text/css' href='#{repobasecss}')
