ISSUE #26 - Some update to the css styles

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -303,9 +303,10 @@ span.fancytree-title:hover {
 	visibility: hidden;
 	z-index: 2500;
 	top: 50px;
-	width: 300px;
+	min-width: 300px;
+	max-width: 900px;
+	right: 1px;
 	padding: 5px;
-	right: 0px;
 	position: absolute;
 }
 
