--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -28,10 +28,10 @@
 }
 
 body {
-	position: fixed;
-	width : 100%;
-	height: 100%;
-	overflow: hidden;
+	//position: fixed;
+	//width : 100%;
+	//height: 100%;
+	//overflow: hidden;
     margin : 0;     
     padding : 0;
           -webkit-touch-callout: none;
@@ -315,6 +315,7 @@ span.fancytree-title:hover {
 	width:100%;
 	height:100%;
 	border:0px;
+	display: block;
 }
 
 .metadata-title{
