--- a/views/viewer.jade
+++ b/views/viewer.jade
@@ -1,7 +1,7 @@
 append content
 	script(type="text/javascript" src='../js/controlinterface.js')
 	script(type="text/javascript" src='../js/viewer.js')
-	script(type="text/javascript" src='../js/floatingmeta.js')
+	//script(type="text/javascript" src='../js/floatingmeta.js')
 	script.
 		$(function() {
 			$("#meta-popup").draggable({ snap : ".viewport" });
@@ -9,9 +9,8 @@ append content
 	div.viewport
 		div#meta-popup.draggable.ui-widget-content
 			div#metadata
-		x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" id="viewer")
+		x3d(xmlns="http://www.web3d.org/specification/x3d-namespace" disableDoubleclick="true" id="viewer")
 			scene(onbackgroundClicked="bgroundClick(event);")
-				viewpoint#sceneVP
 				!{xml}
 				block scene.
 
