--- a/public/css/simple.css
+++ b/public/css/simple.css
@@ -28,3 +28,22 @@
 	padding: 10px;
 }
 
+.viewport {
+	position: fixed;
+}
+
+#readme {
+	position: absolute;
+	min-width: 100px;
+	min-height: 100px;
+	z-index: 100;
+}
+
+#controls {
+	position: absolute;
+	min-width: 5px;
+	min-height: 5px;
+	z-index: 100;
+}
+
+
