--- a/views/ng-templates/simple_mainpage.jade
+++ b/views/ng-templates/simple_mainpage.jade
@@ -1,5 +1,6 @@
 x3d#viewer(xmlns='http://www.web3d.org/specification/x3d-namespace', keysEnabled='false', disableDoubleClick='true')
 	include simple_readme
+	//include simple_vis_controls
 	scene(onbackgroundclicked='bgroundClick(event);')
 		viewpoint#sceneVP
 		navigationInfo#nav
